--- a/www/manifest.json
+++ b/www/manifest.json
@@ -3,19 +3,22 @@
     "short_name": "LMCTFY!",
     "icons": [
         {
-            "src": "img/icon-48x48.png",
+            "src": "img/maskable-icon-48x48.png",
             "sizes": "48x48",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-72x72.png",
+            "src": "img/maskable-icon-72x72.png",
             "sizes": "72x72",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-96x96.png",
+            "src": "img/maskable-icon-96x96.png",
             "sizes": "96x96",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
             "src": "img/maskable-icon-108x108.png",
@@ -24,29 +27,34 @@
             "purpose": "maskable"
         },
         {
-            "src": "img/icon-120x120.png",
+            "src": "img/maskable-icon-120x120.png",
             "sizes": "120x120",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-144x144.png",
+            "src": "img/maskable-icon-144x144.png",
             "sizes": "144x144",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-180x180.png",
+            "src": "img/maskable-icon-180x180.png",
             "sizes": "180x180",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-192x192.png",
+            "src": "img/maskable-icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "img/icon-512x512.png",
+            "src": "img/maskable-icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ],
     "start_url": "/",
